--- a/templates/user-data.sh.tmpl
+++ b/templates/user-data.sh.tmpl
@@ -7,7 +7,7 @@ exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
 # -----------------------------------------------------------------------------
 
 function install_docker_ce() {
-  sudo yum install -y docker-20.10.4-1.amzn2
+  sudo amazon-linux-extras install docker=stable
   sudo systemctl enable docker
   sudo systemctl start docker
   sudo usermod -a -G docker ec2-user
