Fix Docker install on Amazon Linux 2023

--- a/templates/user-data.sh.tmpl
+++ b/templates/user-data.sh.tmpl
@@ -7,9 +7,9 @@ exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
 # -----------------------------------------------------------------------------
 
 function install_docker_ce() {
-  sudo amazon-linux-extras install docker=stable
-  sudo systemctl enable docker
+  sudo dnf install docker -y
   sudo systemctl start docker
+  sudo systemctl enable docker
   sudo usermod -a -G docker ec2-user
 }
 
